--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adaptive Analytics - PostHog-inspired Dashboard</title>
-    <meta name="description" content="Adaptive - A beautiful analytics platform with Apple-like design, featuring real-time insights, feature flags, and comprehensive user tracking." />
+    <title>adaptive.fyi</title>
+    <meta
+      name="description"
+      content="Adaptive - A beautiful analytics platform with Apple-like design, featuring real-time insights, feature flags, and comprehensive user tracking."
+    />
     <meta name="author" content="Adaptive Analytics" />
 
-    <meta property="og:title" content="Adaptive Analytics - Beautiful Analytics Platform" />
-    <meta property="og:description" content="Modern analytics dashboard with Apple-like design, real-time insights, and powerful feature flag management." />
+    <meta
+      property="og:title"
+      content="Adaptive Analytics - Beautiful Analytics Platform"
+    />
+    <meta
+      property="og:description"
+      content="Modern analytics dashboard with Apple-like design, real-time insights, and powerful feature flag management."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@adaptive_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
