--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>adaptive.fyi</title>
     <meta
       name="description"
-      content="Adaptive - A beautiful analytics platform with Apple-like design, featuring real-time insights, feature flags, and comprehensive user tracking."
+      content="adaptive.fyl - A beautiful analytics platform with Apple-like design, featuring real-time insights, feature flags, and comprehensive user tracking."
     />
-    <meta name="author" content="Adaptive Analytics" />
+    <meta name="author" content="adaptive.fyi analytics" />
 
     <meta
       property="og:title"
-      content="Adaptive Analytics - Beautiful Analytics Platform"
+      content="adaptive.fyi Analytics - Beautiful Analytics Platform"
     />
     <meta
       property="og:description"
